# Wallbuiltbot_SDK1try

./: .clangd  .gitignore  Nacharbeiten_PPL.txt  Nacharbeiten_yolo.txt  README.md  aica-package.toml  initialize_templates.sh  notizen.txt
.devcontainer/: devcontainer.json
.github/workflows/: CODEOWNERS  build-test.yml
.init_wizard/: initialize_package.py  questions.py
.init_wizard/templates/: aica-package.component.toml.j2  aica-package.controller.toml.j2  aica-package.toml.j2
.init_wizard/templates/.devcontainer/: devcontainer.json.j2
.init_wizard/templates/.github/workflows/: build-test.yml.j2
.init_wizard/templates/component/: CMakeLists.txt.j2  package.xml.j2  requirements.txt.j2  setup.cfg.j2
.init_wizard/templates/component/component_descriptions/: README.md.j2  package_name_cpp_component.json.j2  package_name_cpp_lifecycle_component.json.j2  package_name_py_component.json.j2  package_name_py_lifecycle_component.json.j2
.init_wizard/templates/component/include/package_name/: CPPComponent.hpp.j2  CPPLifecycleComponent.hpp.j2
.init_wizard/templates/component/package_name/: py_component.py.j2  py_lifecycle_component.py.j2
.init_wizard/templates/component/src/: CPPComponent.cpp.j2  CPPLifecycleComponent.cpp.j2
.init_wizard/templates/controller/: CMakeLists.txt.j2  controller_plugins.xml.j2  package.xml.j2
.init_wizard/templates/controller/controller_descriptions/: README.md.j2  package_name_controller_name_snake.json.j2
.init_wizard/templates/controller/src/: controller_name.cpp.j2
source/kloetzchenpackagetrynrone/: CMakeLists.txt  package.xml  requirements.txt  setup.cfg
source/kloetzchenpackagetrynrone/component_descriptions/: README.md  dropoff_line_extractor.json  exploration_navigator.json  kloetzchenpackagetrynrone_py_lifecycle_component.json  master_list_manager.json  pick_place_controller.json  pose_triggered_camera.json  yolo_object_detector.json
source/kloetzchenpackagetrynrone/kloetzchenpackagetrynrone/: dropoff_line_extractor.py  exploration_navigtor.py  master_list_manager.py  pick_place_controller.py  pose_triggered_camera.py  py_lifecycle_component.py  yolo_object_detection.py
source/kloetzchenpackagetrynrone/test/python_tests/: test_py_lifecycle_component.py
(+6 files in other folders)
