[options.entry_points]
python_components =
    # register Python components
    kloetzchenpackagetrynrone::PyLifecycleComponent = kloetzchenpackagetrynrone.py_lifecycle_component:PyLifecycleComponent
    kloetzchenpackagetrynrone::PickPlaceController = kloetzchenpackagetrynrone.pick_place_controller:PickPlaceController
    kloetzchenpackagetrynrone::ExplorationNavigator = kloetzchenpackagetrynrone.exploration_navigator:ExplorationNavigator
    kloetzchenpackagetrynrone::PoseTriggeredCamera = kloetzchenpackagetrynrone.pose_triggered_camera:PoseTriggeredCamera
    kloetzchenpackagetrynrone::YoloObjectDetector = kloetzchenpackagetrynrone.yolo_object_detector:YoloObjectDetector
    kloetzchenpackagetrynrone::DropoffLineExtractor = kloetzchenpackagetrynrone.dropoff_line_extractor:DropoffLineExtractor
    kloetzchenpackagetrynrone::MasterListManager = kloetzchenpackagetrynrone.master_list_manager:MasterListManager